<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainAddNoteActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:paddingTop="32dp"
    android:paddingBottom="0dp"
    tools:context=".AddNoteActivity">

    <TextView
        android:id="@+id/textAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:text="Add Note"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/testTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Title"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        app:layout_constraintTop_toBottomOf="@id/textAddNote" />

    <EditText
        android:id="@+id/editTextAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="Type your note..."
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testTitle"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:text="Description"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAddNote" />

    <EditText
        android:id="@+id/editTextDescriptionWrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="Write your description"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDescription"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="Submit"
        android:onClick="onSubmitClicked"
        app:cornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/editTextDescriptionWrite"/>

</androidx.constraintlayout.widget.ConstraintLayout>