<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainDisplayNoteActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:paddingTop="32dp"
    android:paddingBottom="0dp"
    tools:context=".DisplayNoteActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textDisplayNote"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title and Description will be here." />

</androidx.constraintlayout.widget.ConstraintLayout>